<resources>
    <string name="app_name">Devoluciones</string>
    <string name="title_activity_devolucion">Devolución</string>

    <!-- PREFERENCIAS ************************************************************************** -->
    <string name="preferences">Configuración</string>
    <string name="pref_user">Usuario</string>
    <string name="pref_wifi">Indica la red WIFI interna</string>
    <string name="pref_wifi_title">Red WIFI</string>
    <string name="pref_servidor_title">IP Servidor</string>
    <string name="pref_servidor">Indica la IP del servidor</string>
    <string name="pref_servicio_title">URL</string>
    <string name="pref_servicio">Indica la URL del servicio</string>
    <string name="pref_barcode">Código Barras Empresa</string>
    <string name="pref_barcode_title">Código Barras</string>
    <string name="pref_check_barcode">¿Comprobar codigo barras empresa?</string>

    <!-- MENU NAVIGATION************************************************************************ -->
    <string name="home">Inicio</string>
    <string name="settings">Configuración</string>
    <string name="actualizar">Actualizar Datos</string>
    <string name="resetear">Resetear Datos</string>

    <!-- MAIN*********************************************************************************** -->
    <string name="pagina1">Por procesar</string>
    <string name="pagina2">No Enviados</string>
    <string name="pagina3">Histórico</string>

    <!-- ALERTAS ******************************************************************************* -->
    <string name="advertencia">Advertencia</string>
    <string name="no_wifi_pref">No se ha indicado ninguna red Wifi, ve a configuración</string>
    <string name="no_servidor_pref">No se ha indicado ningún servidor, ve a configuración</string>
    <string name="no_servicio_pref">No se ha indicado ningún servicio, ve a configuración</string>
    <string name="no_wifi_conn">No se ha podido conectar a la red Wifi indicada: %1$s</string>
    <string name="conn_err">Error al conectar con el servidor intentelo más tarde</string>
    <string name="database_err">Error en la base de datos</string>
    <string name="error_barcode_company">La etiqueta no pertenece a la compania</string>
    <string name="descartar_cambios">¿Seguro que quieres descartar los cambios?</string>

    <!-- PROGRESO ****************************************************************************** -->
    <string name="progress_title">Espere</string>
    <string name="progress_msj">Obteniendo Datos...</string>
    <string name="progress_msj_save">Guardando datos...</string>
    <string name="progress_msj_send">Enviando datos...</string>

    <!-- DEVOLUCION***************************************************************************** -->
    <string name="devol_title">Devolución</string>
    <string name="devol_codigo">Codigo Cliente</string>
    <string name="devol_razon">Razón Social</string>
    <string name="devol_accion">Acción a tomar</string>
    <string name="devol_motivo">Motivo</string>

    <string name="devol_obs">Observaciones</string>
    <string name="devol_obs_error">Debes indicar un texto</string>
    <string name="devol_obs_guardada">Observación guardada</string>

    <string name="devol_adj">Adjuntos</string>

    <!-- LINEAS********************************************************************************* -->
    <string name="linea_title">Linea</string>
    <string name="linea_codigo">Codigo Producto</string>
    <string name="linea_descripcion">Descripción</string>
    <string name="linea_cantidad">Cantidad</string>
    <string name="linea_umv">UMV</string>
    <string name="linea_lote">Lote</string>
    <string name="linea_caducidad">Caducidad (Pulsar aquí para abrir calendario)</string>
    <string name="linea_guardada">Linea guardada correctamente</string>
    <string name="linea_motivo">Motivo</string>

    <string name="linea_pregunta_motivo">¿Son motivos de la calidad del producto?</string>
    <string name="linea_titulo_motivo">Motivo</string>
    <string name="linea_titulo_acciones">Acciones</string>

    <string name="linea_e_codigo">Debes indicar un código</string>
    <string name="linea_e_cantidad">Debes indicar una cantidad</string>

    <!-- MENU DEVOLUCION********************************************************************************* -->
    <string name="devol_buscar">Buscar</string>
    <string name="devol_guardar">Guardar</string>
    <string name="devol_observacion">Observaciones</string>
    <string name="devol_adjunto">Adjunto</string>
    <string name="devol_guardada">Devolución guardada correctamente</string>
    <string name="devol_e_codigo">Debes indicar un código</string>
    <string name="devol_e_linea">Debes indicar una linea como mínimo</string>

    <string name="devol_adj_tamanyo">Solo se pueden añadir 12 fotos</string>

    <!-- SNAKE********************************************************************************** -->
    <string name="num_clientes">Numero de clientes: %1$s</string>
    <string name="num_articulos">Número de articulos: %1$s</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
