<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">

    <com.pcs.vicchiam.devoluciones.views.EditTextPreference
        android:key="user"
        android:title="@string/pref_user"
        android:summary=""
        android:dialogTitle="@string/pref_user"
        android:defaultValue="Anonimo"
        android:textColor="@android:color/black"/>

    <com.pcs.vicchiam.devoluciones.views.EditTextPreference
        android:key="ssid"
        android:title="@string/pref_wifi"
        android:summary=""
        android:dialogTitle="@string/pref_wifi_title"
        android:defaultValue="PCS"
        android:textColor="@android:color/black"/>

    <com.pcs.vicchiam.devoluciones.views.EditTextPreference
        android:key="servidor"
        android:title="@string/pref_servidor"
        android:summary=""
        android:dialogTitle="@string/pref_servidor_title"
        android:defaultValue="172.16.0.173"
        android:textColor="@android:color/black"/>

    <com.pcs.vicchiam.devoluciones.views.EditTextPreference
        android:key="servicio"
        android:title="@string/pref_servicio"
        android:summary=""
        android:dialogTitle="@string/pref_servicio_title"
        android:defaultValue="Apps/android/devoluciones/repartidor.php"
        android:textColor="@android:color/black"/>

    <com.pcs.vicchiam.devoluciones.views.ListPreference
        android:key="frecuencia_actualizar_cliente"
        android:title="@string/pref_actualizar"
        android:entries="@array/actualizacion_clientes"
        android:entryValues="@array/actualizacion_clientes_values"
        android:defaultValue="2"/>

</PreferenceScreen>